actualizado el nuevo artículo

--- a/public/pages/peliculas-que-ensenarte.html
+++ b/public/pages/peliculas-que-ensenarte.html
@@ -3,11 +3,16 @@
 
 <p>
     Me gustaría hacer aquí una recopilación de unas pocas películas que creo, 
-    que si estás de paso por esta web no deberías perderte. Como soy un poco 
-    especialito, voy a escribir una pequeña reseña a mi manera de cada una, 
-    intentando hacer el mínimo <em>spoiler</em>, acompañada (cuando lo vea 
-    necesario) de algún que otro motivo relevante sobre porqué deberías verla 
-    lo antes posible.
+    que si estás de paso por esta web no deberías perderte. No son ni las más 
+    raras ni las más conocidas, hay de todo, son simplemente películas que me 
+    gusta recomendar y ver con cualquiera.
+</p>
+
+<p>
+    Como soy un poco especialito, voy a escribir una pequeña reseña a mi manera 
+    de cada una, intentando hacer el mínimo <em>spoiler</em>, acompañada 
+    (cuando lo vea necesario) de algún que otro motivo relevante sobre porqué 
+    deberías verla lo antes posible.
 </p>
 
 <!-- <h2>Häxan: La brujería a través de los tiempos</h2>
