nuevo artículo sobre la configuración de los drivders de nvidi en arch && borrados algunos comentarios sobrantes en el index

--- a/factory/peliculas-que-ensenarte.html
+++ b/factory/peliculas-que-ensenarte.html
@@ -128,7 +128,7 @@
 <h2>Ghost in the Shell</h2>
 
 <p>
-    Mamoru Oshii (1995)
+    Mamoru Oshii (1995) <em>anime, cyberpunk, hackers, transhumanismo</em>
 </p>
 
 <p>
@@ -141,10 +141,6 @@
 
 <p>
     Uno de los mayores exponentes de la cultura <em>cyberpunk</em> en el <em>anime</em>, que junto a <strong>Akira</strong> (1988), de <em>Katsuhiro Ōtomo</em>, ayudaron a popularizar el género en todo el mundo.
-</p>
-
-<p>
-    Temas: <em>anime, cyberpunk, hackers, transhumanismo.</em>
 </p>
 
 <!-- <h2>La princesa Mononoke</h2>
