update default color scheme

--- a/public/pages/color.html
+++ b/public/pages/color.html
@@ -6,10 +6,11 @@
 </p>
 
 <ul>
-    <li><a href="index.php?page=color.html&id=0">B&W</a> - Paleta por <strong>defecto</strong>, basada en el concepto de simpleza.</li>
+    <li><a href="index.php?page=color.html&id=0">Grey&White</a> - Paleta por <strong>defecto</strong>, extremadamente minimalista.</li>
     <li><a href="index.php?page=color.html&id=1">Melocotón</a> - Antigua paleta por <strong>defecto</strong>, basada en el color melocotón (<samp>#EDD1B0</samp>) para facilitar la lectura.</li>
     <li><a href="index.php?page=color.html&id=2">Modo oscuro</a> - Alto contraste.</li>
     <li><a href="index.php?page=color.html&id=3">Auto</a> - Colores por defecto del navegador.</li>
     <li><a href="index.php?page=color.html&id=4">N-O-D-E</a> - Soy muy fan de <a href="https://n-o-d-e.net">esa</a> web.</li>
     <li><a href="index.php?page=color.html&id=5">GitHub Dark dimmed</a> - Por ahora, mi paleta de colores preferida de GitHub.</li>
+    <li><a href="index.php?page=color.html&id=6">Black&White</a> - Solo dos colores, exceptuando enlaces.</li>
 </ul>
