updated last git arcticle

--- a/public/pages/comandos-utiles-git.html
+++ b/public/pages/comandos-utiles-git.html
@@ -99,7 +99,7 @@ git branch
 </blockquote>
 
 <p>
-    Crear una rama nueva.
+    Crear una rama nueva y moverte a ella.
 </p>
 
 <pre>
@@ -112,4 +112,20 @@ git checkout -b &lt;branch_name&gt;
 
 <pre>
 git checkout &lt;branch_name&gt;
+</pre>
+
+<p>
+    Borrar una rama local.
+</p>
+
+<pre>
+git branch -d &lt;branch_name&gt;
+</pre>
+
+<p>
+    Borrar una rama remota.
+</p>
+
+<pre>
+git push origin --delete &lt;branch_name&gt;
 </pre>
