toqueteando artículos, revisando erratas, cambios de sentido e ideas nuevas

--- a/public/pages/faq.html
+++ b/public/pages/faq.html
@@ -27,6 +27,10 @@ Preguntas que yo ya se que vas a hacer.
     Compré el dominio <samp>rat.la</samp> en busca de tres cosas: un nombre fácil de recordar, corto y asequible. Busqué durante mucho tiempo, probando múltiples combinaciones de letras, intentando evitar los números y descartando los dominios de nivel superior muy largos, estilo <samp>.website</samp>. Incluso llegué a utilizar generadores de palabras aleatorias para conseguir las palabras con 3 letras que encajasen mejor con mis requisitos.
 </p>
 
+<p>
+    Tras esa ardua búsqueda encontré en oferta el dominio <samp>.la</samp> y pensando un subdominio adecuado se me ocurrió "rat", como una rata cantando <em>La, la, la</em>.
+</p>
+
 <!-- Para evitar que el contenido se mueva al cargar la imagen puse "height: 180.47px;" al <p>, porque la imagen era de 400x180.47 -->
 <p>
     <a href="https://www.instagram.com/pepunto.reik" aria-label="Artista: @pepunto.reik">
@@ -44,7 +48,15 @@ Preguntas que yo ya se que vas a hacer.
 </p>
 
 <p>
-    Tras esa ardua búsqueda encontré en oferta el dominio <samp>.la</samp> y pensando un subdominio adecuado se me ocurrió "rat", como una rata cantando <em>La, la, la</em>.
+    Esta imagen ilustra bien la chorrada en la que estaba pensando a la hora 
+    de elegir el dominio. Está dibujada por mi amiga <strong>pepunto.reik</strong> 
+    (<a href="https://www.instagram.com/pepunto.reik">este es su Instagram</a>) 
+    la cual fué muy amable y me ofreció varios dibujos para que yo eligiera. 
+    Durante los primeros meses de la web fué la portada de la página hasta que 
+    mi obsesión por la simplicidad y la eficiencia en la carga me obligaron a 
+    tomar la horrible decisión de relegarla a un segundo plano. Pero en 
+    compensación la he trasladado a esta página para que no caiga en mi olvido, 
+    y posibilitando su futuro retorno al primer plano.
 </p>
 
 <h2>¿Puedo compartir, citar o copiar el contenido o la totalidad de un post?</h2>
