--- a/public/pages/inoro.html
+++ b/public/pages/inoro.html
@@ -2,7 +2,16 @@
 <h1>Inoro</h1>
 
 <p>
-    Aquí no voy a contar nada sobre mi. Solo voy a comentar la anodina historia que explica este nombre.
+    Joven muchacho entusiasta de las redes, la programación y el mundo del 
+    <em>software</em> libre, que tuvo la idea de crear un blog/web personal con 
+    el afán de tener un lugar donde escribir y trastear con tecnologías web. 
+    Por el momento, soy el único administrador de este sítio y asimismo 
+    único creador de contenido, a pesar de haber implementado un sencillo 
+    (pero efectivo) sistema de usuarios 😓.
+</p>
+
+<p>
+    Aquí no voy a contar mucho sobre mi. Solo voy a comentar la anodina historia sobre dónde surgió el seudónimo <em>Inoro</em>.
 </p>
 
 <p>
