--- a/public/pages/mi-software.html
+++ b/public/pages/mi-software.html
@@ -34,11 +34,11 @@
 <h3>Window Manager/Desktop Environment</h3>
 
 <p>
-    <strong>gnome-shell</strong> es el entorno de escritorio que mas me gusta y estoy 
-    muy acostumbrado a su <em>workflow</em>. De todas formas estoy muy 
-    interesado en probar un <em>tiling window manager</em> estilo 
-    <strong>dwm</strong> o <strong>i3</strong> en el que sea capaz de recordar todos sus 
-    comandos.
+    <strong>gnome-shell</strong> es el entorno de escritorio que mas me gusta 
+    y estoy muy acostumbrado a su <em>workflow</em> (sobre todo en la versión 
+    40). De todas formas estoy muy interesado en probar un <em>tiling window 
+    manager</em> estilo <strong>dwm</strong> o <strong>i3</strong> en el que 
+    sea capaz de recordar todos sus comandos.
 </p>
 
 <h3>Terminal</h3>
@@ -112,4 +112,18 @@
     pasar un par de meses utilizando <strong>Brave</strong> y no encuentro 
     ningún impedimento puede que termine mudándome. En tal caso supongo que lo 
     anunciaré en un futuro artículo.
+</p>
+
+<h2>Smartphone (Android)</h2>
+
+<h3>Mensajería instantánea</h3>
+
+<p>
+    <strong>Telegram</strong> y <strong>Signal</strong>, se que 
+    <strong>Telegram</strong> no es tan seguro como <strong>Signal</strong> y 
+    que tiene un montón de carencias a nivel de seguridad. Pero ya me ha 
+    costado demasiado mover a todo mi círculo desde <strong>WhatsApp</strong> 
+    hasta <strong>Telegram</strong> como para ahora decirles que tienen que 
+    usar Signal para hablar conmigo. De todas formas, actualmente, ya lo 
+    lo estoy intentando a paulatinamente.
 </p>
