--- a/public/pages/cowboy-bebop.html
+++ b/public/pages/cowboy-bebop.html
@@ -55,5 +55,5 @@
 <!-- <iframe class="yt" width="420" height="315" src="https://www.youtube.com/embed/Aw3fN3OPk3A" frameborder="0" allowfullscreen></iframe> -->
 
 <p>
-    Publicado originalmente el 9 de Abril de 2016.
+    Publicado originalmente el 9 de Abril de 2016 en mi antiguo blog.
 </p>
