agreajustes de contacto

--- a/public/pages/faq.html
+++ b/public/pages/faq.html
@@ -90,3 +90,11 @@ Preguntas que yo ya se que vas a hacer.
 <p>
     Me he currado una lista bastante detallada sobre el software que utilizo habitualmente en <a href="index.php?page=mi-software.html">esta página</a>. Espero que responda a la pregunta.
 </p>
+
+<h2>¡Mi pregunta no aparece en la lista!</h2>
+
+<p>
+    En el <a href="#footer">footer</a> de la página podrás encontrar mi correo 
+    electrónico. Si quieres preguntarme cualquier cosa no dudes en 
+    escribirme. Estaré encantado de contestarte.
+</p>
