--- a/public/pages/inoro.html
+++ b/public/pages/inoro.html
@@ -25,3 +25,11 @@
 <p>
     Y eso es todo ¿una historia anodina verdad? Pero no importa, lo interesante es que recordé esta historia justo en el momento preciso en el que decidí cambiar de seudónimo en internet.
 </p>
+
+<p>
+    Mis cuentas de <strong>GitHub</strong>, <strong>GitLab</strong>, 
+    <strong>Twitter</strong> y mi <strong>correo de contacto</strong> están 
+    en el <a href="#footer">footer</a> de la página (por si no los habías 
+    visto). Si quieres preguntarme cualquier cosa más no dudes en escribirme. 
+    Suelo responder los <em>e-mails</em>, sobre todo.
+</p>
