poniendo avartar a inoro

--- a/public/pages/inoro.html
+++ b/public/pages/inoro.html
@@ -2,6 +2,10 @@
 <h1>Inoro</h1>
 
 <p>
+    <img src="img/inoro.webp" alt="Avatar de Inoro" class="half">
+</p>
+
+<p>
     Joven muchacho entusiasta de las redes, la programación y el mundo del 
     <em>software</em> libre, que tuvo la idea de crear un blog/web personal con 
     el afán de tener un lugar donde escribir y trastear con tecnologías web. 
