agregado script de licencia para el avatar de inoro, update rss

--- a/public/pages/inoro.html
+++ b/public/pages/inoro.html
@@ -3,6 +3,15 @@
 
 <p>
     <img src="img/inoro.webp" alt="Avatar de Inoro" class="half">
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org/",
+            "@type": "ImageObject",
+            "contentUrl": "https://record.rat.la/img/inoro.webp",
+            "license": "https://creativecommons.org/licenses/by-nc-sa/4.0/",
+            "acquireLicensePage": "https://record.rat.la/index.php?page=faq.html"
+        }
+    </script>
 </p>
 
 <p>
