fix inoro page description

--- a/public/pages/inoro.html
+++ b/public/pages/inoro.html
@@ -1,6 +1,8 @@
 <!-- 202009180002i -->
 <h1>Inoro</h1>
 
+<p style="display:none;">Página descriptiva sobre mi persona.</p>
+
 <p>
     <img src="img/inoro.webp" alt="Avatar de Inoro" class="half">
     <script type="application/ld+json">
