fixed description Inoro

--- a/public/pages/inoro.html
+++ b/public/pages/inoro.html
@@ -1,7 +1,15 @@
 <!-- 202009180002i -->
 <h1>Inoro</h1>
 
-<p style="display:none;">Página descriptiva sobre mi persona.</p>
+<p>Página descriptiva sobre mi persona.</p>
+
+<!--
+    trick para que no se muestre el primer <p> pero si que cuente para la 
+    descripción del artículo
+-->
+<style>
+    h1 + p {display: none;}
+</style>
 
 <p>
     <img src="img/inoro.webp" alt="Avatar de Inoro" class="half">
