corrección de faltas de ortografía

--- a/public/pages/descripcion.html
+++ b/public/pages/descripcion.html
@@ -14,7 +14,7 @@
     ir actualizando regularmente lo que voy haciendo y dejarlo por escrito. Para 
     que yo, al retomar ese proyecto en el futuro, pueda leer y volver al 
     contexto en el que me encontraba. Porque actualmente tengo tantos frentes 
-    abiertos que ya no se ni que estaba haciendo antes del verano ni lo que 
+    abiertos que ya no sé ni que estaba haciendo antes del verano ni lo que 
     voy a hacer ahora.
 </p>
 
