--- a/public/pages/faq.html
+++ b/public/pages/faq.html
@@ -1,7 +1,7 @@
 <!-- 202009180001i -->
 <h1>FAQ</h1>
 
-Preguntas que yo ya se que vas a hacer.
+Preguntas que yo ya sé que vas a hacer.
 
 <h2>¿Qué es esto?</h2>
 
