--- a/public/pages/solucion-series-numericas-java-python.html
+++ b/public/pages/solucion-series-numericas-java-python.html
@@ -130,7 +130,7 @@ print(lista)
 
 <h2>4. La serie de los cuadrados perfectos escritos al revés</h2>
 
-<p>Tengo dudas, no se si se refiere a esto:</p>
+<p>Tengo dudas, no sé si se refiere a esto:</p>
 
 <h3>Los cuadrados perfectos al revés en Java</h3>
 
