editando el artículo de las pelis

--- a/factory/peliculas-que-ensenarte.html
+++ b/factory/peliculas-que-ensenarte.html
@@ -15,17 +15,41 @@
     deberías verla lo antes posible.
 </p>
 
-<!-- <h2>Häxan: La brujería a través de los tiempos</h2>
+<h2>Häxan: La brujería a través de los tiempos</h2>
 
 <p>
-    Benjamin Christensen (1922)
+    Benjamin Christensen (1922) <em>documental, cine mudo, años 20, brujería, esoterismo, religión</em>
 </p>
 
 <p>
-    ...
+    <img src="img/202103282128/haxan-750.webp" alt="Imagen decorativa apaisada">
 </p>
 
-<h2>Sopa de ganso</h2>
+<p>
+    Benjamin Christensen, de forma muy rudimentaria pero efectiva, nos expone 
+    una serie de escenas independientes donde intenta explicar el contexto y 
+    las consecuencias que sufrían las mujeres acusadas de brujería en 
+    diferentes etapas de la historia. Una delicia estética que no te dejará 
+    indiferente a la hora de juzgarlo desde la perspectiva actual.
+</p>
+
+<p>
+    Cuando me enteré de que existía un documental de 1922, mudo, sobre la 
+    historia de la brujería a través de los tiempos no pude esperar para verlo. 
+    Combina a la perfección demasiadas cosas que me encantan en una única 
+    película; los documentales, el cine mudo, la temática lúgubre y mística de 
+    los cuentos de terror y, a demás, el cambio de perspectiva que supone, 
+    desde hoy en día, tratar un tema como este con la visión de los años 20.
+</p>
+
+<p>
+    A pesar de lo mucho que me fascine, no considero que sea un film que 
+    interese a todo el mundo, pero si que lo recomiendo a personas que les 
+    gusta el cine raro y experimental, o los cuentos de terror al estilo de 
+    <em>Lovecraft</em> o <em>Poe</em>.
+</p>
+
+<!--<h2>Sopa de ganso</h2>
 
 <p>
     Leo McCarey (1933)
@@ -250,3 +274,34 @@
 <p>
     ...
 </p> -->
+
+<h2>Mad Max: Furia en la carretera <em>(Mad Max: Fury Road)</em></h2>
+
+<p>
+    George Miller (2015) <em>acción, post-apocalíptico, coches, desierto, carreras</em>
+</p>
+
+<p>
+    <img src="img/202103282128/fury-road-750.webp" alt="Imagen decorativa apaisada">
+</p>
+
+<p>
+    En un mundo post-apocalíptico la tierra se está quedando sin agua y el nuevo 
+    oro es la gasolina. Todos los dioses nos han abandonado y ahora se honra a 
+    los coches y las armas. Los escasos grupos de supervivientes se organizan 
+    en comunas lideradas por caciques, que someten a la población y la retienen 
+    a cambio de un poco de agua. En este contexto de horror y desesperación un 
+    conjunto de personajes intentará escapar de esta horrible cultura hacia 
+    nuevos horizontes, mas allá del desierto, dónde se cree que existe un lugar 
+    que aún alberga agua.
+</p>
+
+<p>
+    Creo que es una de las mejores películas de la historia del cine, lo tiene 
+    todo; un montaje trepidante, efectos especiales fabulosos, un diseño de 
+    producción impecable, una dirección de fotografía preciosa y un 
+    <em>acting</em> adecuado. Sólo falla un pequeño detalle; no tiene un buen 
+    argumento, un buén guión. La película, en mi opinión, solo cojea de esa 
+    pata, lo cual la acaba convirtiendo en una bonita caja sin nada que valga 
+    la pena en su interior.
+</p>
