cuntinuo con el artículo de las películas

--- a/factory/peliculas-que-ensenarte.html
+++ b/factory/peliculas-que-ensenarte.html
@@ -58,16 +58,54 @@
 <p>
     ...
 </p>
+-->
 
-<h2>Yojimbo</h2>
+<h2>Yojimbo<em>「用心棒」</em></h2>
 
 <p>
-    Akira Kurosawa (1961)
+    Akira Kurosawa (1961) <em>acción, japón feudal, samuráis, Toshiro Mifuine, western</em>
 </p>
 
 <p>
-    ...
-</p>-->
+    <img src="img/202103282128/yojimbo-750.webp" alt="Imagen decorativa apaisada">
+</p>
+
+<p>
+    Un samurái llega a un pueblo desolado bajo el conflicto contínuo entre dos 
+    familias, observando el panorama se percata de que gracias a sus 
+    habilidades con la espada puede sacar provecho de la situación a pesar de 
+    las advertencias de la población local.
+</p>
+
+<p>
+    Posiblemente el germen que dió lugar al <em>spaghetti western</em> debido 
+    a que Sergio Leone, precursor del género, plagió el argumento de esta 
+    película (cambiando la ambientación) en 
+    <strong>Por un puñado de dólares</strong> (1964). El alegó que lo haciá a 
+    modo de homenaje a Akira Kurosawa, al cuál admiraba mucho, pero el juez 
+    dictaminó que no cumplió con el <em>copyright</em> y eso le costó los 
+    derechos de distribución en parte de ásia y el 15% de los beneficios de 
+    toda la película. A Kurosawa le gustó el film pero no le hizo mucha 
+    gracia la "broma".
+</p>
+
+<p>
+    En mi opinión, todas las versiones de este argumento son de mi agrado y 
+    devoción, pero esta destaca por más motivos que la anécdota. Me encanta 
+    la fotografía, y, a pesar de no tener ni idea de imagen o color, creo que 
+    este blanco y negro tienen algo especial (si alguien sabe lo que es que me lo cuente). 
+    También soy muy fan de Toshiro Mifune, y su forma de actuar me 
+    fascina. Creo que en esta película es una de estas donde se ve al actor en 
+    su rol mas icónico, haciendo de samurái solitario, justiciero y 
+    carismático. Una de esas imágenes que quedarán para siempre grabadas en la 
+    história del cine. Muy recomendable.
+</p>
+
+<p>
+    Mientras me informaba para escribir mi opinión me he percatado de que 
+    tiene secuela: <strong>Sanjuro</strong> (1962). Ardo en deseos de verla 
+    cuanto antes.
+</p>
 
 <h2>Uno, dos, tres <em>(One, Two, Three)</em></h2>
 
@@ -100,7 +138,7 @@
 <h2>El bueno, el feo y el malo <em>(Il buono, il brutto, il cattivo)</em></h2>
 
 <p>
-    Sergio Leone (1966) <em>spaghetti western, trilogía del dolar, clint eastwood, almería, burgos</em>
+    Sergio Leone (1966) <em>spaghetti western, trilogía del dolar, Clint Eastwood, almería, burgos</em>
 </p>
 
 <p>
@@ -114,9 +152,9 @@
 </p>
 
 <p>
-    Uno de los primeros trabajos de <em>Clint Eastwood</em>. En mi opinión 
+    Uno de los primeros trabajos de Clint Eastwood. En mi opinión 
     una de las mejores películas de su género, con un uso excelente de la 
-    música por parte de <em>Ennio Morricone</em>, creando una de las más 
+    música por parte de Ennio Morricone, creando una de las más 
     conocidas bandas sonoras de todos los tiempos.
 </p>
 
@@ -170,7 +208,7 @@
     Documental experimental grabado entre 1975 y 1982 que muestra una 
     comparativa entre la naturaleza mas pura y la sociedad humana en su mayor 
     exponente. Una sucesión de planos en movimiento sin ninguna narración, 
-    únicamente acompañada de la música minimalista de <em>Philip Glass</em>, 
+    únicamente acompañada de la música minimalista de Philip Glass, 
     que delega en el espectador para que cada uno le de el significado que crea 
     oportuno. A pesar de ello, el título, cuyo significado en la lengua 
     <em>Hopi</em> es <em>"life out of balance"</em> (vida fuera de balance), 
@@ -231,7 +269,7 @@
 <p>
     Uno de los mayores exponentes de la cultura <em>cyberpunk</em> en el 
     <em>anime</em>, que junto a <strong>Akira</strong> (1988), de 
-    <em>Katsuhiro Ōtomo</em>, ayudaron a popularizar el género en todo el 
+    Katsuhiro Ōtomo, ayudaron a popularizar el género en todo el 
     mundo. Visualización obligada para informáticos y amantes de la tecnología.
 </p>
 
