modificando artículos de películas y sueños

--- a/public/pages/aranas-antiguas-sueno-esoterico.html
+++ b/public/pages/aranas-antiguas-sueno-esoterico.html
@@ -1,5 +1,5 @@
 <!-- 202107220046i -->
-<h1>Sueño: Arañas antiguas</h1>
+<h1>Arañas antiguas – Un sueño esotérico</h1>
 
 <p>
     Esta es la transcripción de un sueño de la noche del 22 de Octubre de 2018.
