--- a/public/pages/yojimbo-japon-inspira-western.html
+++ b/public/pages/yojimbo-japon-inspira-western.html
@@ -1,5 +1,5 @@
 <!-- 202107242057i -->
-<h1>Película: Yojimbo <em>(用心棒)</em></h1>
+<h1>Yojimbo <em>(用心棒)</em> – Japón inspira al <em>Western</em></h1>
 
 <p>
     Akira Kurosawa (1961) <em>acción, japón feudal, samuráis, Toshiro Mifune, western</em>
