corrección de erratas y gazapos

--- a/public/pages/comandos-utiles-git.html
+++ b/public/pages/comandos-utiles-git.html
@@ -1,7 +1,7 @@
 <!-- 202104132159i -->
 <h1><em>Git quick reference</em></h1>
 
-<p>Listado de los comandos mas recurrentes en el día a día con <em>git</em>.</p>
+<p>Listado de los comandos más recurrentes en el día a día con <em>git</em>.</p>
 
 <h2>Elementos a tener en cuenta antes de leer los comandos</h2>
 
@@ -77,7 +77,7 @@ git commit -m "&lt;commit_message&gt;"
 git push
 </pre>
 
-<p>Equivalente mas detallada del comando anterior.</p>
+<p>Equivalente más detallada del comando anterior.</p>
 
 <pre>
 git push origin &lt;branch&gt;
