--- a/public/pages/cookie.html
+++ b/public/pages/cookie.html
@@ -24,7 +24,7 @@
 </p>
 
 <p>
-    Pero un día, mientras dormía tubo una revelación. La próxima vez que viese a alguien por la calle, le preguntaría su nombre, lo escribiría en un papel y se lo pegaría en la frente. Como ella era la reina, a nadie le iba a molestar. Así la próxima vez que ese pobre ciudadano se cruzase con ella, con solo mirarle a la cara, leería el papel que tiene en la frente, y podría saludarlo por su nombre sin tener que volver a preguntárselo.&raquo;
+    Pero un día, mientras dormía tuvo una revelación. La próxima vez que viese a alguien por la calle, le preguntaría su nombre, lo escribiría en un papel y se lo pegaría en la frente. Como ella era la reina, a nadie le iba a molestar. Así la próxima vez que ese pobre ciudadano se cruzase con ella, con solo mirarle a la cara, leería el papel que tiene en la frente, y podría saludarlo por su nombre sin tener que volver a preguntárselo.&raquo;
 </p>
 
 <p>
@@ -40,11 +40,11 @@
 </p>
 
 <blockquote cite="https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)">
-    El anglicismo <em>cookie</em>, usado también <strong>galleta</strong> o <strong>galleta informática</strong> , es un término que hace referencia a una pequeña información enviada por un sitio web y almacenada en el navegador del usuario, de manera que el sitio web puede consultar la actividad previa del navegador. <a href="https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)">Leer mas...</a>
+    El anglicismo <em>cookie</em>, usado también <strong>galleta</strong> o <strong>galleta informática</strong> , es un término que hace referencia a una pequeña información enviada por un sitio web y almacenada en el navegador del usuario, de manera que el sitio web puede consultar la actividad previa del navegador. <a href="https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)">Leer más...</a>
 </blockquote>
 
 <p>
-    Bueno, pues mas o menos lo que yo dije.
+    Bueno, pues más o menos lo que yo dije.
 </p>
 
 <!--
