--- a/public/pages/aranas-antiguas-sueno-esoterico.html
+++ b/public/pages/aranas-antiguas-sueno-esoterico.html
@@ -6,63 +6,63 @@
 </p>
 
 <p>
-    Me gusta escribir los pocos sueños que recuerdo en una especie de diario, 
-    y como este me resultó especialmente teatral me parece lo 
+    Me gusta escribir los pocos sueños que recuerdo en una especie de diario,
+    y como este me resultó especialmente teatral me parece lo
     suficientemente interesante como para presentarlo aquí.
 </p>
 
 <blockquote>
-    Debo hacer notar que al comienzo de la transcripción hay una nota que 
-    indica que la narración está desordenada, sea lo que sea lo que quiera 
+    Debo hacer notar que al comienzo de la transcripción hay una nota que
+    indica que la narración está desordenada, sea lo que sea lo que quiera
     decir eso.
 </blockquote>
 
 <p>
-    &laquo;Se presentan ante mi un conjunto de cajas negras. Unas manos sin 
-    rostro definido me las van mostrando una por una. Yo permanezco inmóvil, 
-    sentado frente la misteriosa figura que me presenta los macabros objetos. 
-    Cuando acaba de enseñarme todas las cajas por fuera se dispone a abrir la 
+    &laquo;Se presentan ante mi un conjunto de cajas negras. Unas manos sin
+    rostro definido me las van mostrando una por una. Yo permanezco inmóvil,
+    sentado frente la misteriosa figura que me presenta los macabros objetos.
+    Cuando acaba de enseñarme todas las cajas por fuera se dispone a abrir la
     primera.
 </p>
 
 <p>
-    El interior de las cajas es de una tela blanca y acolchada, como si de una 
-    cama se tratase. A medida que se va abriendo, observo con auténtico pavor 
-    su horripilante contenido. En su interior veo un conjunto de negras arañas 
-    de diferentes tamaños que se mantienen inmóviles, posadas sobre la sedosa 
-    tela blanca. Una vez abierta por completo, la figura que me muestra la caja 
-    va acercándola hacia mi lentamente, y yo empiezo a sudar frio. Pero da 
-    igual el enorme horror que me invade, no me puedo mover, algo me retiene 
-    en el asiento a pesar de no ver ni notar ninguna sujeción física —estoy 
+    El interior de las cajas es de una tela blanca y acolchada, como si de una
+    cama se tratase. A medida que se va abriendo, observo con auténtico pavor
+    su horripilante contenido. En su interior veo un conjunto de negras arañas
+    de diferentes tamaños que se mantienen inmóviles, posadas sobre la sedosa
+    tela blanca. Una vez abierta por completo, la figura que me muestra la caja
+    va acercándola hacia mi lentamente, y yo empiezo a sudar frío. Pero da
+    igual el enorme horror que me invade, no me puedo mover, algo me retiene
+    en el asiento a pesar de no ver ni notar ninguna sujeción física —estoy
     petrificado por el miedo—.
 </p>
 
 <p>
-    Cuando la caja ya está lo suficientemente cerca de mi con su espantoso 
-    contenido a la vista, las arañas empiezan a reanimarse lentamente, huyendo 
-    hacia los bordes. Y antes de que las mas espabiladas intenten saltar fuera 
-    del receptáculo que las mantenía en pausa, la figura con rostro difuso 
-    cierra la tapa de golpe ante mis narices y susurra 
-    —Estas cajas son antiguas, muy antiguas, tan antiguas que los humanos 
-    habían olvidado su existencia. Su contenido es tan antiguo como las cajas, 
+    Cuando la caja ya está lo suficientemente cerca de mi con su espantoso
+    contenido a la vista, las arañas empiezan a reanimarse lentamente, huyendo
+    hacia los bordes. Y antes de que las más espabiladas intenten saltar fuera
+    del receptáculo que las mantenía en pausa, la figura con rostro difuso
+    cierra la tapa de golpe ante mis narices y susurra
+    —Estas cajas son antiguas, muy antiguas, tan antiguas que los humanos
+    habían olvidado su existencia. Su contenido es tan antiguo como las cajas,
     pero ya ves, a pesar de lo increíble que parezca, ellas siguen vivas—.
 </p>
 
 <p>
-    En ese instante la figura abre una segunda, y el proceso se repite 
-    exactaménte como el anterior, a excepción de mi miedo, el cual aumentaba 
-    con cada caja abierta. El proceso se repitió como el primero hasta llegar 
-    a la última, cuando —justo antes de cerrarse— una de las arañas 
-    consigue escabullirse por el borde de de la caja y cae sobre mis 
+    En ese instante la figura abre una segunda, y el proceso se repite
+    exactamente como el anterior, a excepción de mi miedo, el cual aumentaba
+    con cada caja abierta. El proceso se repitió como el primero hasta llegar
+    a la última, cuando —justo antes de cerrarse— una de las arañas
+    consigue escabullirse por el borde de de la caja y cae sobre mis
     piernas.&raquo;
-    
+   
 </p>
 
 <p>
     En ese momento mi terror es tal que no puedo soportarlo y me despierto.
-    Me gusta pensar que si hubiera conseguido seguir durmiendo me hubiera 
-    desmallado en sueños. O ¿quién sabe? igual la esotérica araña causaba en 
-    mí una reacción digna de un relato de H.P. Lovecraft, nunca lo sabremos, y 
+    Me gusta pensar que si hubiera conseguido seguir durmiendo me hubiera
+    desmayado en sueños. O ¿quién sabe? igual la esotérica araña causaba en
+    mí una reacción digna de un relato de H.P. Lovecraft, nunca lo sabremos, y
     prefiero no repetirlo.
 </p>
 
