--- a/public/pages/descripcion.html
+++ b/public/pages/descripcion.html
@@ -8,11 +8,11 @@
 
 <p>
     Debido a que siempre estoy iniciando y abandonando nuevos proyectos, y que 
-    cada dos por tres no paro de saltar entre centrarme en la programación, en 
+    cada dos por tres no dejo de saltar entre centrarme en la programación, en 
     las redes o en las configuraciones de GNU/Linux, entre otras muchas cosas. 
-    He decidido llevar un registro mas o menos diario, semanal, o por lo menos 
-    ir actualizando regularmente lo que voy haciendo y dejarlo por escrito. Para 
-    que yo, al retomar ese proyecto en el futuro, pueda leer y volver al 
+    He decidido llevar un registro más o menos diario, semanal, o por lo menos 
+    ir actualizando regularmente lo que voy haciendo y dejarlo por escrito. 
+    Para que yo, al retomar ese proyecto en el futuro, pueda leer y volver al 
     contexto en el que me encontraba. Porque actualmente tengo tantos frentes 
     abiertos que ya no sé ni que estaba haciendo antes del verano ni lo que 
     voy a hacer ahora.
