--- a/public/pages/genesis.html
+++ b/public/pages/genesis.html
@@ -1,5 +1,5 @@
 <!-- 202009181457i -->
-<h1>Génesis</h1>
+<h1>Genesis</h1>
 
 <blockquote>
     <!-- Lo pongo en un blockquote para que la descripción del artículo siga siendo la misma -->
@@ -11,7 +11,7 @@
 </p>
 
 <p>
-    Esto implica que la base de la web será un marco igual para cada página, es decir, un header y un footer iguales para toda la web y que el contenido de la página sea un artículo. Adiós a las páginas especiales, adiós a la biografía, adiós a la pagina de contacto. Todo será un marco y un contenido.
+    Esto implica que la base de la web será un marco igual para cada página, es decir, un header y un footer iguales para toda la web y que el contenido de la página sea un artículo. Adiós a las páginas especiales, adiós a la biografía, adiós a la página de contacto. Todo será un marco y un contenido.
 </p>
 
 <h2>Estructura interna</h2>
@@ -21,17 +21,17 @@
 </p>
 
 <p>
-    Los archivos de los posts, o artículos, tienen una estructura muy simple, lo único que se debe respetar son dos cocas; una es el formato del nombre para el archivo: <samp>AAAAMMDDhhmma-titulo-del-articulo.html</samp>, donde <samp>AAAA</samp> es el año, <samp>MM</samp> es el mes, <samp>DD</samp> es el día, <samp>hh</samp> es la hora, <samp>mm</samp>, son los minutos y donde <samp>a</samp> es el id del autor. Y otra es que la primera linea del archivo debe contener el título rodeado de los tags HTML <code>&lt;h2&gt;&lt;/h2&gt;</code>. El resto del artículo es HTML puro, por lo general siempre debería prevalecer la sintaxis básica de etiquetas HTML5 pero en caso de ser necesario se pueden agregar scripts en JavaScript o estilos CSS personalizados dentro del propio archivo del artículo.
+    Los archivos de los posts, o artículos, tienen una estructura muy simple, lo único que se debe respetar son dos cocas; una es el formato del nombre para el archivo: <samp>AAAAMMDDhhmma-titulo-del-articulo.html</samp>, donde <samp>AAAA</samp> es el año, <samp>MM</samp> es el mes, <samp>DD</samp> es el día, <samp>hh</samp> es la hora, <samp>mm</samp>, son los minutos y donde <samp>a</samp> es el id del autor. Y otra es que la primera línea del archivo debe contener el título rodeado de los tags HTML <code>&lt;h2&gt;&lt;/h2&gt;</code>. El resto del artículo es HTML puro, por lo general siempre debería prevalecer la sintaxis básica de etiquetas HTML5 pero en caso de ser necesario se pueden agregar scripts en JavaScript o estilos CSS personalizados dentro del propio archivo del artículo.
 </p>
 
 <h2>El estilo</h2>
 
 <p>
-    Debido a que la tendencia actual en el diseño de páginas web consiste en basarse únicamente en <code>div</code> y <code>span</code> para, formatearlos mas tarde con CSS, yo nunca había utilizado las etiquetas HTML5 dándoles un uso correcto, ni utilizándolas para lo que realmente se habían concebido. Pero esta vez me he propuesto usarlas. Utilizarlas para la mayor parte del formato de texto de los artículos de esta web. Gracias a ello he descubierto que realmente el HTML5 es un lenguaje que no requiere de CSS para cualquier cosa.
+    Debido a que la tendencia actual en el diseño de páginas web consiste en basarse únicamente en <code>div</code> y <code>span</code> para, formatearlos más tarde con CSS, yo nunca había utilizado las etiquetas HTML5 dándoles un uso correcto, ni utilizándolas para lo que realmente se habían concebido. Pero esta vez me he propuesto usarlas. Utilizarlas para la mayor parte del formato de texto de los artículos de esta web. Gracias a ello he descubierto que realmente el HTML5 es un lenguaje que no requiere de CSS para cualquier cosa.
 </p>
 
 <p>
-    Tanto es este afán mio por explotar por completo el HTML que por el momento este es todo el CSS que he necesitado:
+    Tanto es este afán mío por explotar por completo el HTML que por el momento este es todo el CSS que he necesitado:
 </p>
 
 <pre>
@@ -87,11 +87,11 @@ pre, code {
 </p>
 
 <p>
-    De todas formas la elección del color, aunque yo creo que estoy contento con ella, por el momento queda bajo revisión. Y en el futuro me gustaría añadir un selector de temas estilo <a href="https://4chan.org" rel="nofollow">4chan</a> donde también agregaré el cada vez mas popular <em>dark mode</em>, entre otros que a mi me gusten.
+    De todas formas la elección del color, aunque yo creo que estoy contento con ella, por el momento queda bajo revisión. Y en el futuro me gustaría añadir un selector de temas estilo <a href="https://4chan.org" rel="nofollow">4chan</a> donde también agregare el cada vez más popular <em>dark mode</em>, entre otros que a mi me gusten.
 </p>
 
 <p>
-    Con respecto a la fuente las cosas han sido mas fáciles. Posiblemente porque no leí tanto para elegirla, y debido a que ya tenía una idea en la cabeza de que debería ser una estilo <samp>Serif</samp>. Todo esto motivado por mi obsesión con <samp>LaTeX</samp> y que su fuente por defecto es la <samp>Computer Modern</samp>.
+    Con respecto a la fuente las cosas han sido más fáciles. Posiblemente porque no leí tanto para elegirla, y debido a que ya tenía una idea en la cabeza de que debería ser una estilo <samp>Serif</samp>. Todo esto motivado por mi obsesión con <samp>LaTeX</samp> y que su fuente por defecto es la <samp>Computer Modern</samp>.
 </p>
 
 <p>
@@ -99,7 +99,7 @@ pre, code {
 </p>
 
 <p>
-    Por estos dos motivos elegí la letra <samp>Times</samp> para los dispositivos que la tuviesen instalada y, como segunda opción, concretamente porque los dispositivos Android no traen la letra <samp>Times</samp> instalada, indico que el dispositivo elija la letra estilo <samp>Serif</samp> que tenga por defecto.
+    Por estos dos motivos elegí la letra <samp>Times</samp> para los dispositivos que la tuvieran instalada y, como segunda opción, concretamente porque los dispositivos Android no traen la letra <samp>Times</samp> instalada, indico que el dispositivo elija la letra estilo <samp>Serif</samp> que tenga por defecto.
 </p>
 
 <h2>Inspiraciones</h2>
