--- a/public/pages/donaciones.html
+++ b/public/pages/donaciones.html
@@ -4,7 +4,7 @@
 <p>
     Puedes apoyar este sitio, si te apetece, con las siguientes 
     <em>criptomonedas</em>. En un futuro intentaré poner una cuenta de PayPal 
-    o algo por el estilo, para que sea mas accesible.
+    o algo por el estilo, para que sea más accesible.
 </p>
 
 <ul>
